--- a/views/show.erb
+++ b/views/show.erb
@@ -3,4 +3,5 @@
   <p>Student Name:<%= @student.first_name() %> <%= @student.second_name() %></p>
   <p>House: <%= @student.house()  %></p>
   <p>Age: <%= @student.age()  %></p>
+  <p><a href="/hogwarts">Click here to go back to the student list</a>
   <hr>
