--- a/views/create.erb
+++ b/views/create.erb
@@ -1,7 +1,7 @@
 <h1>The new student has been created with the following info;</h1>
 
 <p>Student Name: <%= @student.first_name() %> <%= @student.second_name() %></p>
-<p>House: <%= @student.house()  %></p>
+<p>House: <%= @student.house.name  %></p>
 <p>Age: <%= @student.age()  %></p>
 <p>Click <a href="/hogwarts">here</a> to return to the student list </p>
 <hr>
