--- a/views/index.erb
+++ b/views/index.erb
@@ -6,7 +6,7 @@
 <% for student in @students do %>
 
   <p>Student Name:<%= student.first_name() %> <%= student.second_name() %></p>
-  <p>House: <%= student.house()  %></p>
+  <p>House: <%= student.house.name  %></p>
   <p>Age: <%= student.age()  %></p>
   <p><a href="/hogwarts/<%= student.id %>">Show student details</a></p>
   <hr>
