--- a/views/new.erb
+++ b/views/new.erb
@@ -6,13 +6,15 @@
     <label for="second-name-field">Second name:</label>
     <input type="text" name="second_name" id="second-name-field">
     <label for="house-select">House:</label>
-      <select name="house" id="house-select">
-        <option value="Griffindor">Gryffindor</option>
-        <option value="Ravenclaw">Ravenclaw</option>
-        <option value="Hufflepuff">Hufflepuff</option>
-        <option value="Slytherin">Slytherin</option>
-      </select>
 
+  <select name="house_id" id="house-select">
+
+    <% for house in House.all do %>
+
+      <option value= <%=house.id%>> <%=house.name%></option>
+    <% end %>
+
+    </select>
     <label for="age-field">Age:</label>
     <input type="number" name="age" id="age-field">
 
