--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,10 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Hogwarts Database</title>
+    <link rel="stylesheet" href="/styles.css">
+    <h1>!Welcome to Hogwarts!</h1>
+    <a href="/hogwarts"><img id="logo" src="/hogwarts.jpg" alt="hogwarts-logo"></a>
   </head>
   <body>
 
     <%= yield %>
 
   </body>
+  <footer>
+  <p><a id="magic" href="https://media.giphy.com/media/3o7TKP9ln2Dr6ze6f6/giphy.gif" target="_blank">Click here for magic!</a></p>
+</footer>
 </html>
