--- a/public/styles.css
+++ b/public/styles.css
@@ -1,18 +1,34 @@
 
 body {
   text-align: center;
-  background-color: #800028;
+  background: url('/bg.jpg') no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
   font-size: 22px;
   font-weight: bold;
+  color: white;
+}
+
+#form {
+    position:absolute;
+    top:50%;
+    right:0;
+    left:0;
 }
 
 a {
-  color: black
+  color: white
+}
+
+form {
+  text-align: center;
 }
 
 #magic {
-  color: #800000;
-  background-color: #800000;
+  color: #190500;
+  background-color: #190500;
 }
 
 img {
@@ -23,4 +39,14 @@ img {
 #logo {
   height: 200px;
   width: auto;
+}
+
+ul{
+  position:relative;
+  display: inline-block;
+  list-style: none;
+  width:100%;
+  text-align: center;
+  margin: auto;
+  padding: 0;
 }
