--- a/views/create.erb
+++ b/views/create.erb
@@ -3,5 +3,5 @@
 <p>Student Name: <%= @student.first_name() %> <%= @student.second_name() %></p>
 <p>House: <%= @student.house.name  %></p>
 <p>Age: <%= @student.age()  %></p>
-<p>Click <a href="/hogwarts">here</a> to return to the student list </p>
+<p>Click <a href="/hogwarts/all">here</a> to return to the student list </p>
 <hr>
