--- a/views/create.erb
+++ b/views/create.erb
@@ -1,4 +1,4 @@
-<h1>The new student has been created with the following info;</h1>
+<h1>The new student has been <br> created with the following info;</h1>
 
 <p>Student Name: <%= @student.first_name() %> <%= @student.second_name() %></p>
 <p>House: <%= @student.house.name  %></p>
